--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/mapbox-gl": "^3.4.1",
     "@vis.gl/react-google-maps": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,6 +47,7 @@
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.13.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
@@ -53,6 +55,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-map-gl": "^8.0.4",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
