--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,49 +1,94 @@
 {
-  "name": "Walkly",
+  "name": "Walkly - Walking Route Generator",
   "short_name": "Walkly",
-  "description": "Your personal walking companion app",
-  "theme_color": "#47d828",
-  "background_color": "#ffffff",
-  "display": "standalone",
+  "description": "Generate walking routes, track your walks, and capture moments on your journey",
   "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#10b981",
+  "orientation": "portrait-primary",
   "scope": "/",
-  "orientation": "portrait",
+  "categories": ["health", "fitness", "lifestyle", "navigation"],
+  "lang": "en",
+  "dir": "ltr",
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "/appicon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
-      "src": "/apple-touch-icon.png",
+      "src": "apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/appicon.png",
-      "sizes": "192x192",
+      "src": "appicon.png",
+      "sizes": "144x144",
       "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/appicon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     }
   ],
-  "categories": ["health", "fitness", "navigation"],
-  "prefer_related_applications": false,
-  "lang": "en"
+  "shortcuts": [
+    {
+      "name": "Start Walk",
+      "short_name": "Walk",
+      "description": "Generate a new walking route and start tracking",
+      "url": "/map?generate=true",
+      "icons": [
+        {
+          "src": "appicon.png",
+          "sizes": "144x144",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "View History",
+      "short_name": "History",
+      "description": "View your walking history and moments",
+      "url": "/history",
+      "icons": [
+        {
+          "src": "appicon.png",
+          "sizes": "144x144",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "appicon.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Walkly app showing map interface"
+    },
+    {
+      "src": "appicon.png",
+      "sizes": "750x1334",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Walkly mobile interface"
+    }
+  ],
+  "related_applications": [],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": ["navigate-existing", "auto"]
+  },
+  "handle_links": "preferred",
+  "capture_links": "existing-client-navigate"
 } 
